--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -4,9 +4,7 @@
   /*
   BATAS 1
   */
-  h1 {
-    font-size: 2.5vw;
-  }
+
 
   .hover-3::after {
     content: '';
@@ -35,6 +33,16 @@
   }
   
   .hover-3-description {
+    opacity: 0;
+    transform: scale(1.3);
+    transition: all 0.3s;
+    
+  }
+
+  .hover-3-description-text {
+    font-size: 2.5vw;
+  }
+  .hover-3-description-button {
     opacity: 0;
     transform: scale(1.3);
     transition: all 0.3s;
